links all fixed

--- a/content/01/05_jupyterlab.ipynb
+++ b/content/01/05_jupyterlab.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "Extensions I like, but are not currently installed for one reason or another\n",
     "- variableInspector: helps you see inside of data objects which is amazing, but has special install instructions\n",
-    "- jupyterlab-system-monitor: helps you see how much of your CPU and meory are in use\n",
+    "- jupyterlab-system-monitor: helps you see how much of your CPU and memory are in use\n",
     "- nbdime-jupyterlab  (can directly install from the \"extensions menu\")\n",
     "\n",
     "\n",
@@ -256,7 +256,7 @@
    "source": [
     "## Credits\n",
     "\n",
-    "This page borrows from the first chapter of the [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/index.html) and [QuantEcon](https://python.quantecon.org/index_learning_python.html). \n",
+    "This page borrows from the first chapter of the [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/index.html) and [QuantEcon](https://python-programming.quantecon.org/intro.html). \n",
     "\n"
    ]
   }
