--- a/content/05/01_bigpicture.ipynb
+++ b/content/05/01_bigpicture.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "```{seealso}\n",
     "1. [Principles of good data analysis, by Greg Reda](http://www.gregreda.com/2014/03/23/principles-of-good-data-analysis/)\n",
-    "2. [Chapter 3 of Data 100](https://www.textbook.ds100.org/ch/03/modeling_intro.html)\n",
+    "2. [Chapter 3 of Data 100](https://www.textbook.ds100.org/ch/04/modeling_intro.html)\n",
     "3. [How Big Investors Cash in on Alternative Data](https://www.bloomberg.com/news/articles/2019-11-09/how-big-investors-cash-in-on-alternative-data-quicktake)\n",
     "```\n"
    ]
@@ -40,7 +40,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
