--- a/content/05/03d_whatToMax.ipynb
+++ b/content/05/03d_whatToMax.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "It depends! If you have a continuous variable, use R2, MAE, or RMSE.\n",
     "\n",
-    "If you have a classification problem (the \"binary variable\" rows in the table above), you have to think about your problem. [I REALLY like the discussion on this page from DS100.](https://www.textbook.ds100.org/ch/23/classification_sensitivity_specificity.html)\n",
+    "If you have a classification problem (the \"binary variable\" rows in the table above), you have to think about your problem. [I REALLY like the discussion on this page from DS100.](https://www.textbook.ds100.org/ch/24/classification_sensitivity_specificity.html)\n",
     "- In medical tests more broadly, false negatives are really bad - if someone has cancer, don't tell them they are cancer free. Thus, medical tests tend to minimize false negatives.\n",
     "- Minimizing false negatives is the same as maximizing the true positives, aka the \"sensitivity\" of a test, since $FNR=1-TPR$. Better covid tests have higher specificity, because if someone has covid, we want to know that so we can require a quarantine.\n",
     "- In the legal field, false positives (imprisoning an innocent person) are considered worse than false negatives.\n",
@@ -67,7 +67,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -81,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
