deploy: e7b0d41f8cc2d00fd8db0335e6c67dc440e43f15

--- a/_sources/content/05/05_thefuture.ipynb
+++ b/_sources/content/05/05_thefuture.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "Your projects don't have to be finance-related. (My initial python projects weren't!) Maybe it's about your love of some game (e.g. basketball), or tv/movies/books, or sports. Just pick something that sounds fun. \n",
     "\n",
-    "[The website resources](https://ledatascifi.github.io/ledatascifi-2021/content/about/resources.html#resources-tutorials-and-data) has lots of good stuff to explore, but I'd also recommend meandering the links on [this page, including \"fecon\"](https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks#economics-and-finance)."
+    "[The website resources](https://ledatascifi.github.io/ledatascifi-2021/content/about/resources.html#resources-tutorials-and-data) has lots of good stuff to explore, but I'd also recommend meandering the links on [this page, including \"fecon\"](https://github.com/jupyter/jupyter/wiki#economics-and-finance)."
    ]
   },
   {
@@ -50,7 +50,7 @@
     "Not only are dashboards cool as hell, they are also good ways to show off your skills (e.g. put them on your resume) because they can be really useful for real-world decision makers. \n",
     "```\n",
     "\n",
-    "[How do you think this amazing page was built?](https://perthirtysix.com/essay/nba-player-scoring-analysis) Or the interactive visualizations [538, NYT, WaPo, WSJ and others frequently publish](https://fivethirtyeight.com/features/science-isnt-broken/)? And look at all [these freaking awesome examples!](https://dash-gallery.plotly.host/Portal/)  \n",
+    "[How do you think this amazing page was built?](https://www.perthirtysix.com/essay/nba-player-scoring-analysis) Or the interactive visualizations [538, NYT, WaPo, WSJ and others frequently publish](https://fivethirtyeight.com/features/science-isnt-broken/)? And look at all [these freaking awesome examples!](https://dash.gallery/Portal/)  \n",
     "\n",
     "_All you need to build a dashboard is data acquisition and formatting skills - which you have!_\n",
     "\n",
