--- a/_sources/content/03/02f_chains.ipynb
+++ b/_sources/content/03/02f_chains.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "**Let's explore if Game of Thrones changed how babies are named!**[^inspo]\n",
     "\n",
-    "[^inspo]:  [This analysis](https://www.kaggle.com/dhanushkishore/impact-of-game-of-thrones-on-us-baby-names) is the inspiration for our GoT analysis. \n",
+    "[^inspo]:  [Analysis by dhanushkishore](https://www.kaggle.com/dhanushkishore/) is the inspiration for our GoT analysis. I can't find their work anymore, but a similar (identical?) analysis is [here](https://www.kaggle.com/mkariithi/impact-of-game-of-thrones-on-us-baby-names). \n",
     "\n",
     "### Step 1: Download the data\n",
     "\n",
