--- a/_sources/content/03/04a-dataviz.ipynb
+++ b/_sources/content/03/04a-dataviz.ipynb
@@ -17,7 +17,7 @@
     "- [A good python data viz tutorial on Kaggle (more on the how's than the why's](https://www.kaggle.com/residentmario/welcome-to-data-visualization)\n",
     "- [What chart should I use](https://www.data-to-viz.com) and [how can I make it](https://python-graph-gallery.com)\n",
     "- [Jenny Bryan's `ggplot2` walkthrough is for R, but has wisdom I imported here](https://speakerdeck.com/jennybc/ggplot2-tutorial)\n",
-    "- [Fundamentals of Data Visualization, by Claus O. Wilke](https://serialmentor.com/dataviz/)\n",
+    "- [Fundamentals of Data Visualization, by Claus O. Wilke](https://clauswilke.com/dataviz/)\n",
     "- [`seaborn` tutorials](https://seaborn.pydata.org/tutorial.html) \n",
     "- [R for Data Science, by Grolemund and Wickham](https://r4ds.had.co.nz/index.html)\n",
     "\n",
@@ -27,7 +27,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -41,7 +41,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
