--- a/_sources/content/05/03a_ML_obj_and_tradeoff.ipynb
+++ b/_sources/content/05/03a_ML_obj_and_tradeoff.ipynb
@@ -32,7 +32,7 @@
     "E[\\text{model error risk}] = \\text{model bias}^2+\\text{model variance}+\\text{noise}\n",
     "$$\n",
     "\n",
-    "[^biasform]: _(If you want to see the derivation of this, you can go to the [wiki page](https://en.wikipedia.org/wiki/Bias%E2%80%93variance_tradeoff) or [DS100](https://www.textbook.ds100.org/ch/15/bias_modeling.html). The former's notation is a little simpler but the latter is more helpful with intuition)_\n",
+    "[^biasform]: _(If you want to see the derivation of this, you can go to the [wiki page](https://en.wikipedia.org/wiki/Bias%E2%80%93variance_tradeoff) or [DS100](https://www.textbook.ds100.org/ch/21/bias_modeling.html). The former's notation is a little simpler but the latter is more helpful with intuition)_\n",
     "\n",
     "**\"Model bias\"**\n",
     "- Def: Is errors stemming from the model's assumptions in how it predicts the outcome variable. (It is the opposite of model accuracy.)\n",
@@ -108,7 +108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -122,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
