edits to module 4

--- a/content/01/02_Setup.ipynb
+++ b/content/01/02_Setup.ipynb
@@ -65,7 +65,7 @@
     "    ```\n",
     "    ````\n",
     "    \n",
-    "6. Optional, but recommended: Install a good text editor. [Atom](https://atom.io/) or [Sublime](https://www.sublimetext.com/) are recommended. "
+    "6. Optional, but recommended: Install a good text editor. [Atom](https://atom.io/), [Sublime](https://www.sublimetext.com/), or [Visual Studio (this link includes suggestions for extensions)](https://www.youtube.com/watch?v=jY0o1nkW0ow) are the most popular according to prior students of this class. "
    ]
   },
   {
