--- a/content/04/02b_regex.ipynb
+++ b/content/04/02b_regex.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "```{tip}\n",
     "The best ways to learn and use regex are:\n",
-    "1. [https://regexone.com/}(https://regexone.com) is so good, I'm loath to add anything else to this page.\n",
+    "1. [https://regexone.com/](https://regexone.com) is so good, I'm loath to add anything else to this page.\n",
     "2. The [official python documentation](https://docs.python.org/3/library/re.html) and its [HOWTO page](https://docs.python.org/3/howto/regex.html)\n",
-    "3. Google+stackoverflow. \"Has someone done something similar? Yes? Great!\"\n",
+    "3. Google+stackoverflow. If someone has done something similar, and found a solution, great!\n",
     "```\n",
     "\n",
     "Imagine you have a webpage or document which includes (buried in the text) a bunch of numbers. How can you collect all the phone numbers?\n",
@@ -19,17 +19,20 @@
     "\n",
     "Your eyeballs can easily do that, but once the job involves enough enough numbers, it makes sense to let your computer do it for you. \n",
     "\n",
-    "**Regex is how you tell a computer to search for any pattern within a string.**\n",
+    "```{admonition} **Regex is how you tell a computer to search for any pattern within a string.**\n",
     "- Phone numbers \n",
     "- Emails (regex is why people don't spell out their emails \"correctly\" online)\n",
     "- Addresses\n",
     "- Certain words/topics (like assignment 5!)\n",
+    "```\n",
     "\n",
     "## Regex in Python\n",
     "\n",
+    "```{tip}\n",
     "Regex is a skill that works in all programming languages, so this lesson is portable - you can use regex in R or whatever your language of choice is.\n",
+    "```\n",
     "\n",
-    "But obviously, we're going to use python. **Run `import re` to load the regex package.**\n",
+    "But obviously, we're going to use python. **Add `import re` to the top of your code to load the regex package.**\n",
     "\n",
     "### Common functions:\n",
     "\n",
@@ -255,14 +258,14 @@
     "\n",
     "| Char | Matches |\n",
     "| :--- | :--- |\n",
-    "| `\\` | 1. escapes special characters `\\*` will actuallye search for an asterisk. <br><br> 2. or signals a \"special sequence\" |\n",
+    "| `\\` | 1. escapes special characters `\\*` will actually search for an asterisk. <br><br> 2. or signals a \"special sequence\" |\n",
     "| `[]` | Indicates a set of characters. In a set: `[amk]` will match 'a', 'm', or 'k'. <br> <br> Common ranges: `[a-z]`, `[A-Z]`,  `[0-9]`. You can combine ranges: `[A-Za-z0-9]`. <br> <br> Special characters lose their special meaning inside sets. For example, `[(+*)]` will match any of the literal characters `(`, `+`, `*`, or `)`. |\n",
     "| `(...)` | Makes a group. POWERFUL and necessary in most uses of regex. <br> <br> If you actually want to match parentheses, use a backslash: `\\(` |\n",
     "\n",
     "There is SO MANY more special characters. If you can imagine a \"feature\" in the pattern of a string, there is probably a special character. `\\b` matches word boundaries, `\\d for digits, `\\s` for whitespace, and more.\n",
     "\n",
     "```{tip}\n",
-    "Most \"regex\" in practice is just Googling for someone who has done a similar thing.\n",
+    "In practice, most \"regex\" is just Googling to see if someone has done a similar thing.\n",
     "```"
    ]
   },
@@ -299,7 +302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -313,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
