--- a/content/04/01_Intro_to_scraping.ipynb
+++ b/content/04/01_Intro_to_scraping.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "Did you know? Pandas can often directly read tables on webpages! \n",
     "- Try `pd.read_html('https://en.wikipedia.org/wiki/List_of_S%26P_500_companies')`\n",
-    "- Very easy and fast! You don't even need to save the webapge to your hard drive.\n",
+    "- Very easy and fast! You don't even need to save the webpage to your hard drive.\n",
     "- Notes on `read_html`: \n",
     "    1. It can only handle basic HTML tables encoded directly in the page (no Javascript, e.g.) and **only grabs displayed text -- embedded URLs are lost.**\n",
     "    2. If the website changes the data, the next time you run it, you'll get the newer version of data. (Unstable, potentially, but also updates automatically.)\n",
@@ -66,6 +66,12 @@
     "```{dropdown} 4: **Manual API queries** for websites without \"install and play\" APIs\n",
     "\n",
     "Many sites have an API port of some kind serving up the data they show visitors.\n",
+    "\n",
+    "The next few website pages and lectures will cover this. If you can see your search query in the URL, like \"https://www.google.com/search?q=gme+stock+price\", then you can run the searches manually and get the data after opening the page using one of two approaches:\n",
+    "1. If the data is in the HTML code, you can scrape it using the approaches we will discuss. You can look at the HTML code for any webpage by right clicking and then selecting \"View Page Source\" (or similar, depends on the browser). After opening the HTML code, CTRL+F to look for some of the data. If the data is in the page, you can scrape it various ways, which we will cover.\n",
+    "2. If you can see the data on the webpage, but the data isn't in the HTML code when you CTRL+F for it, you're in luck! You'll need to do a few tricks with your browser to find where the API is hidden and how to use it, but after that, you will be able to download the data without doing any HTML scraping! [See this example.](http://www.gregreda.com/2015/02/15/web-scraping-finding-the-api/)\n",
+    "3. And sometimes a webpage is \"hiding\" the way to run queries like this API. You run a search and the URL doesn't look obviously like a search. But often, inside that page is a \"backdoor\" to an API you can search just like the above example. [This](https://nbviewer.jupyter.org/github/nealcaren/ScrapingData/blob/master/Notebooks/Bonus_Undocument_APIs.ipynb) tutorial shows one example of this and more importantly, how the author found the API.\n",
+    "\n",
     "```\n",
     "\n",
     "````{dropdown} 5: **Scraping the data on the website by visiting each page and downloading the data needed**\n",
@@ -123,7 +129,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -137,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
