--- a/content/04/01a_openingAndParsing.ipynb
+++ b/content/04/01a_openingAndParsing.ipynb
@@ -21,26 +21,30 @@
    "source": [
     "## Skill 1: Retrieving URLs and sending manual API queries\n",
     "\n",
-    "```{note} Notice how, when you google something, the URL of the resulting search has the information about the search?\n",
+    "```{note} Have you ever noticed how, when you google something, the URL of the resulting search has the information about the search?\n",
     "\n",
-    "For example: https://www.google.com/search?client=firefox-b-1-d&q=gme+stock_price\n",
+    "For example, suppose I Google \"gme stock price\" (without the quotes). The resulting URL might be: https://www.google.com/search?client=firefox-b-1-d&q=gme+stock+price\n",
     "\n",
-    "We can leverage websites that do that to programmatically run searches and collect data!\n",
+    "This URL has several parts: \n",
+    "1. The stem, ending in a question mark: https://www.google.com/search? \n",
+    "2. Everything after the stem is the parameters of the search\n",
+    "3. A search can contain many parameters, and they will be separated by \"&\"\n",
+    "4. Each parameter is structured like: <parameter name>=<parameter value>\n",
+    "5. Parameter 1: My browser client is a version of firefox\n",
+    "6. Parameter 2: My query (\"q\") is gme+stock+price (spaces aren't allowed in URLs)\n",
+    "\n",
+    "We can leverage websites that do this - putting the search query in the URL - to programmatically run searches and collect data!\n",
     "\n",
     "```\n",
     "\n",
     "### Walkthrough\n",
     "\n",
-    "[Go through the Neal Caren \"First API\" example](https://nbviewer.jupyter.org/github/nealcaren/ScrapingData/blob/master/Notebooks/5_APIs.ipynb)\n",
+    "[Let's go through the Neal Caren \"First API\" example. Some notes as we start:](https://nbviewer.jupyter.org/github/nealcaren/ScrapingData/blob/master/Notebooks/5_APIs.ipynb)\n",
     "- **JSON is just a data storage structure, and in python it's a dictionary.** \n",
     "- In this example, we make the search give us JSON because it can be easier to extract data from JSON than HTML sometimes.\n",
     "- HINTS: \n",
     "    - Dictionaries: You look for what's in a dictionary with `dict.keys()` and then `dict['key']` will show you the value/object belonging to the key\n",
     "    - `pd.DataFrame()` can convert a dictionary to a data frame!\n",
-    "\n",
-    "```{margin}\n",
-    "_For your reference: Sometimes a webpage is \"hiding\" the way to run queries like this API. You run a search and the URL doesn't look obviously like a search. But often, inside that page is a \"backdoor\" to an API you can search just like the above example. [This](https://nbviewer.jupyter.org/github/nealcaren/ScrapingData/blob/master/Notebooks/Bonus_Undocument_APIs.ipynb) tutorial shows one example of this and more importantly, how the author found the API._\n",
-    "```\n",
     "\n",
     "### Practice: Exchange rates\n",
     "\n",
@@ -124,7 +128,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
