--- a/content/04/02a_Python Strings.ipynb
+++ b/content/04/02a_Python Strings.ipynb
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "a_str.split() #splits on spaces by default"
+    "a_str.split() #splits on spaces by default, notice the spaces are gone"
    ]
   },
   {
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "a_str.split('e')"
+    "a_str.split('e') # splits on the 'e's, notice the e's are gone"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "source": [
     "split_up = a_str.split()\n",
     "# syntax: <string to use as joiner>.join(<list of strings>)\n",
-    "'---'.join(split_up)  "
+    "'---'.join(split_up)"
    ]
   },
   {
@@ -148,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -162,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
