--- a/content/04/01a_openingAndParsing.ipynb
+++ b/content/04/01a_openingAndParsing.ipynb
@@ -26,12 +26,12 @@
     "For example, suppose I Google \"gme stock price\" (without the quotes). The resulting URL might be: https://www.google.com/search?client=firefox-b-1-d&q=gme+stock+price\n",
     "\n",
     "This URL has several parts: \n",
-    "1. The stem, ending in a question mark: https://www.google.com/search? \n",
+    "1. The stem, ending in a question mark: \"https://www.google.com/search?\"\n",
     "2. Everything after the stem is the parameters of the search\n",
     "3. A search can contain many parameters, and they will be separated by \"&\"\n",
-    "4. Each parameter is structured like: <parameter name>=<parameter value>\n",
+    "4. Each parameter is structured like: \\<parameter name\\>=\\<parameter value\\>\n",
     "5. Parameter 1: My browser client is a version of firefox\n",
-    "6. Parameter 2: My query (\"q\") is gme+stock+price (spaces aren't allowed in URLs)\n",
+    "6. Parameter 2: My query (\"q\") is gme+stock+price (plus signs because spaces aren't allowed in URLs)\n",
     "\n",
     "We can leverage websites that do this - putting the search query in the URL - to programmatically run searches and collect data!\n",
     "\n",
