--- a/content/05/01d_sharingBigFiles.ipynb
+++ b/content/05/01d_sharingBigFiles.ipynb
@@ -24,7 +24,7 @@
     "1. Upload (compressed) files to Lehigh Google Drive. (A non-Lehigh google drive will work too, but has limitations on space.)\n",
     "2. Turn on sharing for the file by right clicking it and selecting get shareable link, but you don't need to give edit access.\n",
     "3. Turn on sharing for users outside of Lehigh University - you don't need to give edit access. This makes your project more widely usable.\n",
-    "4. Copy the function below ([or in the community codebook](https://github.com/LeDataSciFi/ledatascifi-2021/tree/main/community_codebook)) into the repo you're working in as a file called \"download_file_from_google_drive.py\".\n",
+    "4. Copy the function below ([or in the community codebook](https://github.com/LeDataSciFi/ledatascifi-2022/tree/main/community_codebook)) into the repo you're working in as a file called \"download_file_from_google_drive.py\".\n",
     "5. Get the ID from the sharing link (found at the end of the sharing URL) - you'll need to put that into your code.\n",
     "1. In your file that uses this data:\n",
     "\n",
@@ -130,7 +130,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
