--- a/content/03/04e-visualEDA.ipynb
+++ b/content/03/04e-visualEDA.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "In [the Pandas EDA](02e_eda_golden) page, I explored Compustat by producing summary stats to get a sense of the variables involved, look for missing values, and look for problematic outliers. We noted that some variables, like $delaycon$, had a lot of missing values and decided we'd look into it. \n",
     "\n",
-    "Let's continue exploring that dataset. First, let's download our slice of it. The variables are listed and described in a csv file in the [repo's data folder.](https://github.com/LeDataSciFi/ledatascifi-2021/tree/main/data) "
+    "Let's continue exploring that dataset. First, let's download our slice of it. The variables are listed and described in a csv file in the [repo's data folder.](https://github.com/LeDataSciFi/ledatascifi-2022/tree/main/data) "
    ]
   },
   {
@@ -37,7 +37,7 @@
     "from zipfile import ZipFile\n",
     "from urllib.request import urlopen\n",
     "\n",
-    "url = 'https://github.com/LeDataSciFi/ledatascifi-2021/blob/main/data/CCM_cleaned_for_class.zip?raw=true'\n",
+    "url = 'https://github.com/LeDataSciFi/ledatascifi-2022/blob/main/data/CCM_cleaned_for_class.zip?raw=true'\n",
     "\n",
     "#firms = pd.read_stata(url)   \n",
     "# <-- that code would work, but GH said it was too big and\n",
@@ -406,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Covariances/relationships between variables\n",
+    "## Covariances and relationships between variables\n",
     "\n",
     "To get a quick sense of relationships, I like to use I like to use `pairplot` and `heatmap` to get a quick since of relationships.\n",
     "\n",
@@ -1893,7 +1893,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1907,7 +1907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
