--- a/content/05/04c_onemodel.ipynb
+++ b/content/05/04c_onemodel.ipynb
@@ -46,7 +46,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "url        = 'https://github.com/LeDataSciFi/ledatascifi-2021/blob/main/data/Fannie_Mae_Plus_Data.gzip?raw=true'\n",
+    "url        = 'https://github.com/LeDataSciFi/ledatascifi-2022/blob/main/data/Fannie_Mae_Plus_Data.gzip?raw=true'\n",
     "fannie_mae = pd.read_csv(url,compression='gzip').dropna()\n",
     "y          = fannie_mae.Original_Interest_Rate\n",
     "fannie_mae = (fannie_mae\n",
@@ -155,7 +155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
