--- a/content/05/04e_pipelines.ipynb
+++ b/content/05/04e_pipelines.ipynb
@@ -95,7 +95,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import KFold, cross_validate\n",
     "\n",
-    "url        = 'https://github.com/LeDataSciFi/ledatascifi-2021/blob/main/data/Fannie_Mae_Plus_Data.gzip?raw=true'\n",
+    "url        = 'https://github.com/LeDataSciFi/ledatascifi-2022/blob/main/data/Fannie_Mae_Plus_Data.gzip?raw=true'\n",
     "fannie_mae = pd.read_csv(url,compression='gzip').dropna()\n",
     "y          = fannie_mae.Original_Interest_Rate\n",
     "fannie_mae = (fannie_mae\n",
@@ -435,7 +435,7 @@
     }
    ],
    "source": [
-    "url        = 'https://github.com/LeDataSciFi/ledatascifi-2021/blob/main/data/Fannie_Mae_Plus_Data.gzip?raw=true'\n",
+    "url        = 'https://github.com/LeDataSciFi/ledatascifi-2022/blob/main/data/Fannie_Mae_Plus_Data.gzip?raw=true'\n",
     "fannie_mae = pd.read_csv(url,compression='gzip').dropna()\n",
     "y          = fannie_mae.Original_Interest_Rate\n",
     "fannie_mae = (fannie_mae\n",
@@ -484,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So I added a convenience function (`df_after_transform`) to the [community codebook](https://github.com/LeDataSciFi/ledatascifi-2021/tree/main/community_codebook) to show the dataframe after the ColumnTransformer step.\n",
+    "So I added a convenience function (`df_after_transform`) to the [community codebook](https://github.com/LeDataSciFi/ledatascifi-2022/tree/main/community_codebook) to show the dataframe after the ColumnTransformer step.\n",
     "\n",
     "Notice\n",
     "- The `l_LTV` column is gone!\n",
@@ -1072,7 +1072,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1086,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
