--- a/_sources/content/04/02d_RegexApplication.ipynb
+++ b/_sources/content/04/02d_RegexApplication.ipynb
@@ -522,17 +522,19 @@
     "1. rare earth elements \n",
     "1. supply chains, import tariffs\n",
     "\n",
-    "I strongly suggest approaching this by using two terms. \n",
-    "- You might need to have multiple words in each term. \n",
-    "- Print out the text of the hits!\n",
-    "- Play around with partial and the max parameters. Specifically look for when changing them gives you BAD results: Either way too many non-results are included, or your search to returns too few results because a single hit encompasses several hits that should be separately counted\n",
-    "- Try to get the \"most accurate\" sense of\n",
-    "    - Does the document discuss each issue at all? Is the number of hits 0, or >0?\n",
-    "    - How much does the document discuss the issue? How many hits?\n",
-    "- Does the number of hits reflect the scale of the issue? Why or why not?\n",
-    "- If not, is there a way to transform the number of hits to reflect the scale? Some ideas:\n",
+    "I strongly suggest approaching this by using two terms.  You might need to have multiple words in each term. \n",
+    "\n",
+    "\n",
+    "1. Print out the text of the hits!\n",
+    "2. Play around with partial and the max parameters. Specifically look for when changing them gives you BAD results: Either way too many non-results are included, or your search to returns too few results because a single hit encompasses several hits that should be separately counted\n",
+    "3. Try to get the \"most accurate\" sense of\n",
+    "    1. Does the document discuss each issue at all? Is the number of hits 0, or >0?\n",
+    "    1. How much does the document discuss the issue? How many hits?\n",
+    "4. Does the number of hits reflect the scale of the issue? Why or why not?\n",
+    "5. If not, is there a way to transform the number of hits to reflect the scale? Some ideas:\n",
     "    - Going from 1 to 2 hits is probably more informative that from 99 hits to 100\n",
-    "    - If you use Log(hits), Log(2)-Log(1) is more than Log(100)-Log(99)\n",
+    "    - If you use ln(hits), ln(2)-ln(1) is more than ln(100)-ln(99)\n",
+    "    - Try to use ln(hits) and see if you spot a problem! What's a fix you can use?\n",
     "    - Binning: no discussion (hits=0), some discussion (hits<=#), lots of discussion (hits>#)\n",
     "    - How many bins and how you set the cutoffs is ad hoc and depends on the documents and topics!\n"
    ]
