--- a/content/02/10_Golden_3.ipynb
+++ b/content/02/10_Golden_3.ipynb
@@ -22,7 +22,7 @@
     "| | B. Put input files into an input folder and outputs into a different one |\n",
     "| | A + B = your folders and files will be largely self documenting |\n",
     "| | C. Make directories portable - they should run on any computer, or if you move them to another place on your computer |\n",
-    "| | D [**Use RELATIVE FILE PATHS, not absolute file paths**](10_Golden_7)  :star: :star: |\n",
+    "| | D [**Use RELATIVE FILE PATHS, not absolute file paths**](10_Golden_7)  ⭐ ⭐ |\n",
     "| 4. Keys / Units | A. Store cleaned data in tables with unique, non-missing \"keys\" |\n",
     "| | B. Keep data [**normalized**](10_Golden_4) as far into your code pipeline as you can |\n",
     "| 5. Abstraction - fncs/classes | A. Abstract to eliminate redundancy |\n",
