--- a/_sources/content/04/01b_spiders.ipynb
+++ b/_sources/content/04/01b_spiders.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "search_itunes('billie eilish')      # one search at a time\n",
-    "search_itunes('father john misty')) # \"another one\" - dj khaled"
+    "search_itunes('father john misty')  # \"another one\" - dj khaled"
    ]
   },
   {
@@ -246,7 +246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -260,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
