--- a/content/02/10_Golden_4.ipynb
+++ b/content/02/10_Golden_4.ipynb
@@ -6,36 +6,68 @@
    "source": [
     "# Good Data is Normalized\n",
     "\n",
-    "**Normalized data means the dataset has distinct \"Keys\" + variables in the dataset are the Key's Unit-Level**\n",
+    "```{important}\n",
+    "Normalized data means \n",
+    "1. The dataset has distinct \"Keys\" \n",
+    "2. Variables in the dataset are at the key's unit-Level\n",
+    "\n",
+    "Storing normalized data means your data will be easier to understand and it will be harder to make costly mistakes.\n",
+    "```\n",
     "\n",
     "---\n",
     "\n",
     "There are multi-billion dollar firms whose entire business model depends on storing and accessing data. Therefore we should apply our rule and see how they store data:\n",
     "\n",
+    "```{note}\n",
     "> **Long ago, smart people figured out a fundamental principle of database design: that the physical structure of a database should communicate its logical structure.**\n",
+    "```\n",
     "\n",
-    "How does that work?\n",
-    "1. Every database contains \"elements\" or \"observations\" (rows) and \"variables\" (columns). \n",
-    "2. The \"key\" is the variable(s) that identifies a row in the table. \n",
-    "    - `GM` is the key for the observation about General Motors in a dataset whose unit is a firm. \n",
-    "    - `(GM, 2000)` is the key for the observation for GM in 2000 in a firm-year dataset. \n",
-    "    - **Keys should never be missing!** (**Rule 4.A**) If one is, how can you say what that row is?\n",
-    "    - **Keys should never be duplicated**. If one is, your database won't have a logical structure any more.    \n",
-    "3. Closely related to \"keys\" is the idea of \"units\", refers to the level of aggregation in the dataset. \n",
-    "    - Variables in the dataset should apply as properties of the \"unit\" of the \"key\". In other words: **variables are attributes of the key.**\n",
-    "    - County population is a property of a county, so it lives in the county database, not the state database. State population is a property of a state, so it cannot live in the county table. \n",
-    "    - **Implication: You need one dataset for each unit level. For example:\n",
-    "        - One firm-level dataset and one firm-year dataset. \n",
-    "        - One county dataset and one state dataset.\n",
-    "     \n",
-    "If you have distinct keys in your dataset, and all variables apply to the unit of the key, your dataset is said to be _\"normalized\"_. Storing normalized data means your data will be easier to understand and it will be harder to make costly mistakes. (See the example below)\n",
+    "Let's put that into practice. First we need to agree on three things:\n",
     "\n",
-    "I doubt you will ever run a serious regression or analysis on completely normalized data. So at some point you will combine the datasets. Do your best to delay that (**4.B**).\n",
+    "1. Every database contains \"elements\" or \"observations\" (the rows) and \"variables\" (the columns). \n",
+    "2. Definition: **The \"key\" is the variable(s) that uniquely identifies a row in the table.**\n",
+    "    - If your dataset is about different firms and has one observation per firm, `GM` is the key for the observation about General Motors.\n",
+    "    - If your dataset contains info about firms over multiple years (a \"firm-year\" dataset), `(GM, 2000)` is the key for the observation for GM in 2000. \n",
+    "    - Notice that the \"key\" can be multiple variables, like the firm and the year in the prior sentence. \n",
+    "3. Definition: **The \"unit\" of a dataset refers the level of aggregation of variables in the dataset.** Examples:\n",
+    "    - Firm-level data: Industry of a firm\n",
+    "    - Firm-year data: Profits\n",
+    "    - Firm-day data: Firm returns\n",
+    "    - Daily-data (or any time interval): Market returns\n",
+    "    - Country-year: GDP\n",
+    "    - Country-level data: Continent    \n",
+    "    \n",
+    "## Rules for storing data\n",
+    "    \n",
+    "1. Rule: **Keys should never be missing!** (**Rule 4.A**) If one is, how can you say what that row is about?\n",
+    "4. Rule: **Keys should never be duplicated**. If any keys are duplicated, there is a problem with your dataset or you misunderstand what the unit is and what variable(s) constitute the key. \n",
+    "5. Rule: **Variables in a normalized dataset are at the unit level of the dataset, and not other unit levels.**\n",
     "\n",
+    "--- \n",
     "\n",
-    "### Example: Bad and Good Data\n",
+    "Rule 3 means that if the key is a county, and the unit is the county in 2010 (a cross section at a single point in time), then the variables you can have in that dataset are attributes of the county as of 2010. \n",
     "\n",
-    "So, as a trivial example, here is a bad firm-year dataset:\n",
+    "If you have variables about state populations, they should be in a different database (the state database).\n",
+    "\n",
+    "If you have variables about the county at many points in time (county GDP for each year), those should be in a different database (the county-year database).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Normalized data in practice\n",
+    "\n",
+    "Try to create and store data that is normalized. But notice how [Golden rule 4.B](10_Golden_3) is phrased: \"Keep data normalized as far into your code pipeline _as you can.\"_\n",
+    "\n",
+    "I doubt you will ever run a serious regression or analysis on completely normalized data. For example, asset pricing tests require the firm's return that day (which is a variable whose unit is a firm-day) and the market return (which is a variable whose unit is a day). \n",
+    "\n",
+    "So at some point you will combine datasets with different unit levels. Do your best to delay that (**4.B**) until the beginning of the analysis. \n",
+    "\n",
+    "## Example: Fixing non-normalized data\n",
+    "\n",
+    "So, as a little example, here is a bad firm-year dataset:\n",
     "\n",
     "| Firm | Year | Profits | First_year | IndustryDef | SubIndustryDef| Profits_Ind |\n",
     "|:--- | :--- | :--- | :---| :---| :---| :---|\n",
@@ -46,9 +78,19 @@
     "| Ford | 2002 | 8 | 1903 | 2 | 1A | 23 |\n",
     "|  | 2002 | 15 | 1903 | 2 | 1A | 23 |\n",
     "\n",
-    "What a mess! What is the last observation about? How is GM missing a \"first year\" in one observation? GM and Ford are in the same sub-industry, but different industries? You'll have to keep track of what `Profits` and `Profits_Ind` mean. (And which industry level are profits at?)\n",
+    "What a mess! \n",
+    "- What is the last observation about? \n",
+    "- How is GM missing a \"first year\" in one observation? GM and Ford are in the same sub-industry, but different industries? \n",
+    "- You'll have to keep track of what `Profits` and `Profits_Ind` mean. (And which industry level are profits at?)\n",
     "\n",
-    "The main issue is that this dataset conflates firm-year variables (profits in a given year) with firm-level variables (the first year of the firm. You can fix this by keeping three datasets, one firm-year dataset:\n",
+    "Beyond those problems, this dataset has variables at THREE unit levels:\n",
+    "1. Firm-year variables (profits in a given year for a given firm)\n",
+    "2. Firm-level variables (first year the firm existed)\n",
+    "3. Industry-year variables (industry profits)\n",
+    "\n",
+    "To save this data in a normalized form, we need to save three datasets. Check out how I did that:\n",
+    "\n",
+    "```{tabbed} Firm-year variables\n",
     "\n",
     "| Firm | Year | Profits | \n",
     "|:--- | :--- | :--- | \n",
@@ -57,24 +99,26 @@
     "| Ford | 2000 | -4 | \n",
     "| Ford | 2001 | 7.5 |\n",
     "| Ford | 2002 | 8 | \n",
+    "```\n",
     "\n",
-    "... and a firm-level dataset:\n",
+    "```{tabbed} Firm-level variables\n",
     "\n",
     "| Firm | First_year | IndustryDef | SubIndustryDef|\n",
     "|:--- | :--- | :--- | :---|\n",
     "|GM|1908|1 | 1A |\n",
     "|Ford|1903|1|1A|\n",
+    "```\n",
     "\n",
-    "... and an industry-year dataset:\n",
+    "```{tabbed} Industry-year variables\n",
     "\n",
     "| IndustryDef | Year | Profits |\n",
     "|:--- | :---  | :--- |\n",
     "| 1 | 2000 | 1 |\n",
     "|1 | 2001 | 13 |\n",
     "|1 | 2002 | 23 |\n",
+    "```\n",
     "\n",
-    "\n",
-    "Now, the physical structure of each dataset communicates its logical structure: Every firm-year has a profit level, and each firm has a founding year. **In fact, these databases are self-documenting! (Rule 6.C) Isn't that nice!?**"
+    "Now, the physical structure of each dataset communicates its logical structure: Every firm-year has a profit level, and each firm has a founding year. **In fact, these three databases are self-documenting! (Rule 6.C) Isn't that nice!?**"
    ]
   }
  ],
@@ -94,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
